--- a/bank-automat/mainwindow.ui
+++ b/bank-automat/mainwindow.ui
@@ -10,6 +10,11 @@
     <height>600</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <pointsize>22</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
@@ -17,14 +22,24 @@
    <widget class="QPushButton" name="btnstart">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>150</y>
-      <width>191</width>
-      <height>111</height>
+      <x>348</x>
+      <y>217</y>
+      <width>105</width>
+      <height>58</height>
      </rect>
     </property>
     <property name="text">
      <string>Aloita</string>
+    </property>
+   </widget>
+   <widget class="QLCDNumber" name="lcdNumber">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>350</y>
+      <width>191</width>
+      <height>91</height>
+     </rect>
     </property>
    </widget>
   </widget>
@@ -34,7 +49,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>22</height>
+     <height>55</height>
     </rect>
    </property>
   </widget>
