--- a/bank-automat/login.ui
+++ b/bank-automat/login.ui
@@ -52,7 +52,7 @@ background-color: rgb(255, 255, 255);</string>
    <item row="0" column="2">
     <spacer name="verticalSpacer">
      <property name="orientation">
-      <enum>Qt::Vertical</enum>
+      <enum>Qt::Orientation::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -79,7 +79,7 @@ color: rgb(0, 0, 0);</string>
    <item row="0" column="0" rowspan="2">
     <spacer name="verticalSpacer_2">
      <property name="orientation">
-      <enum>Qt::Vertical</enum>
+      <enum>Qt::Orientation::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -246,7 +246,7 @@ color: rgb(0, 0, 0);</string>
         <string>  Check card type if card is double </string>
        </property>
       </widget>
-      <widget class="QWidget" name="">
+      <widget class="QWidget" name="layoutWidget">
        <property name="geometry">
         <rect>
          <x>110</x>
@@ -305,12 +305,19 @@ color: rgb(0, 0, 0);</string>
        <property name="geometry">
         <rect>
          <x>60</x>
-         <y>350</y>
-         <width>581</width>
-         <height>41</height>
+         <y>310</y>
+         <width>571</width>
+         <height>111</height>
         </rect>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout_4">
+        <item>
+         <widget class="QPushButton" name="btnLogout">
+          <property name="text">
+           <string>Logout</string>
+          </property>
+         </widget>
+        </item>
         <item>
          <widget class="QPushButton" name="btn_transactions">
           <property name="styleSheet">
@@ -342,6 +349,24 @@ color: rgb(0, 0, 0);</string>
          </widget>
         </item>
        </layout>
+      </widget>
+      <widget class="QLabel" name="mainmenulabel">
+       <property name="geometry">
+        <rect>
+         <x>70</x>
+         <y>510</y>
+         <width>101</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>13</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
       </widget>
      </widget>
      <widget class="QWidget" name="page_4">
@@ -384,7 +409,7 @@ color: rgb(0, 0, 0);</string>
         <item>
          <spacer name="horizontalSpacer">
           <property name="orientation">
-           <enum>Qt::Horizontal</enum>
+           <enum>Qt::Orientation::Horizontal</enum>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
@@ -543,24 +568,26 @@ color: rgb(0, 0, 0);</string>
         <string>Confirm</string>
        </property>
       </widget>
-     </widget>
-     <widget class="QWidget" name="page_6">
-      <widget class="QLineEdit" name="lineEdit_balance">
+      <widget class="QLabel" name="withdrawllabel">
        <property name="geometry">
         <rect>
-         <x>132</x>
-         <y>240</y>
-         <width>211</width>
-         <height>71</height>
+         <x>40</x>
+         <y>530</y>
+         <width>311</width>
+         <height>51</height>
         </rect>
        </property>
-       <property name="styleSheet">
-        <string notr="true">background-color: rgb(255, 255, 255);</string>
+       <property name="font">
+        <font>
+         <pointsize>13</pointsize>
+        </font>
        </property>
        <property name="text">
-        <string>:</string>
+        <string/>
        </property>
       </widget>
+     </widget>
+     <widget class="QWidget" name="page_6">
       <widget class="QLabel" name="label_balance">
        <property name="geometry">
         <rect>
@@ -577,6 +604,24 @@ background-color: rgb(255, 255, 255);</string>
        </property>
        <property name="text">
         <string>            Balance</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_balance_2">
+       <property name="geometry">
+        <rect>
+         <x>100</x>
+         <y>210</y>
+         <width>291</width>
+         <height>121</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>:</string>
        </property>
       </widget>
      </widget>
