--- a/bank-automat/login.ui
+++ b/bank-automat/login.ui
@@ -219,45 +219,81 @@
             <layout class="QVBoxLayout" name="verticalLayout_account">
               <item>
                 <widget class="QLabel" name="label_4">
-                  <property name="alignment">
-                    <set>Qt::AlignCenter</set>
+                  <property name="minimumHeight">
+                    <number>60</number>
                   </property>
                   <property name="font">
                     <font>
-                      <pointsize>14</pointsize>
+                      <pointsize>16</pointsize>
+                      <bold>true</bold>
                     </font>
                   </property>
                   <property name="styleSheet">
-                    <string notr="true">background-color: rgb(255, 255, 255);</string>
+                    <string>background-color: white; border-radius: 5px; padding: 10px;</string>
                   </property>
                   <property name="text">
-                    <string>  Check card type if card is double </string>
+                    <string>Select Account Type</string>
+                  </property>
+                  <property name="alignment">
+                    <set>Qt::AlignCenter</set>
                   </property>
                 </widget>
               </item>
               <item>
-                <layout class="QHBoxLayout" name="accountButtonsLayout">
-                  <item>
-                    <widget class="QPushButton" name="btn_debit">
-                      <property name="styleSheet">
-                        <string notr="true">background-color: rgb(255, 255, 255);</string>
-                      </property>
-                      <property name="text">
-                        <string>Debit</string>
-                      </property>
-                    </widget>
-                  </item>
-                  <item>
-                    <widget class="QPushButton" name="btn_credit">
-                      <property name="styleSheet">
-                        <string notr="true">background-color: rgb(255, 255, 255);</string>
-                      </property>
-                      <property name="text">
-                        <string>Credit</string>
-                      </property>
-                    </widget>
-                  </item>
-                </layout>
+                <widget class="QWidget" name="accountSelectionContainer" native="true">
+                  <property name="styleSheet">
+                    <string>
+                      QWidget#accountSelectionContainer {
+                        background-color: white;
+                        border-radius: 10px;
+                        padding: 20px;
+                      }
+                      QPushButton {
+                        min-height: 80px;
+                        font-size: 16px;
+                        font-weight: bold;
+                        background-color: #2196F3;
+                        color: white;
+                        border-radius: 10px;
+                        margin: 10px;
+                      }
+                      QPushButton:hover {
+                        background-color: #1976D2;
+                      }
+                    </string>
+                  </property>
+                  <layout class="QVBoxLayout" name="accountButtonsLayout">
+                    <property name="spacing">
+                      <number>20</number>
+                    </property>
+                    <item>
+                      <widget class="QPushButton" name="btn_debit">
+                        <property name="minimumSize">
+                          <size>
+                            <width>300</width>
+                            <height>80</height>
+                          </size>
+                        </property>
+                        <property name="text">
+                          <string>Debit Account</string>
+                        </property>
+                      </widget>
+                    </item>
+                    <item>
+                      <widget class="QPushButton" name="btn_credit">
+                        <property name="minimumSize">
+                          <size>
+                            <width>300</width>
+                            <height>80</height>
+                          </size>
+                        </property>
+                        <property name="text">
+                          <string>Credit Account</string>
+                        </property>
+                      </widget>
+                    </item>
+                  </layout>
+                </widget>
               </item>
             </layout>
           </widget>
@@ -267,62 +303,113 @@
             <layout class="QVBoxLayout" name="verticalLayout_menu">
               <item>
                 <widget class="QLabel" name="label_5">
-                  <property name="alignment">
-                    <set>Qt::AlignCenter</set>
+                  <property name="minimumHeight">
+                    <number>60</number>
                   </property>
                   <property name="font">
                     <font>
-                      <pointsize>14</pointsize>
+                      <pointsize>16</pointsize>
+                      <bold>true</bold>
                     </font>
                   </property>
                   <property name="styleSheet">
-                    <string notr="true">background-color: rgb(255, 255, 255);</string>
+                    <string>background-color: white; border-radius: 5px; padding: 10px;</string>
                   </property>
                   <property name="text">
-                    <string>                      Main menu</string>
+                    <string>Main Menu</string>
+                  </property>
+                  <property name="alignment">
+                    <set>Qt::AlignCenter</set>
                   </property>
                 </widget>
               </item>
               <item>
-                <layout class="QHBoxLayout" name="menuButtonsLayout">
-                  <item>
-                    <widget class="QPushButton" name="btnLogout">
-                      <property name="text">
-                        <string>Logout</string>
-                      </property>
-                    </widget>
-                  </item>
-                  <item>
-                    <widget class="QPushButton" name="btn_transactions">
-                      <property name="styleSheet">
-                        <string notr="true">background-color: rgb(255, 255, 255);</string>
-                      </property>
-                      <property name="text">
-                        <string>Transactions</string>
-                      </property>
-                    </widget>
-                  </item>
-                  <item>
-                    <widget class="QPushButton" name="btn_balance">
-                      <property name="styleSheet">
-                        <string notr="true">background-color: rgb(255, 255, 255);</string>
-                      </property>
-                      <property name="text">
-                        <string>Balance</string>
-                      </property>
-                    </widget>
-                  </item>
-                  <item>
-                    <widget class="QPushButton" name="btn_withdrawal">
-                      <property name="styleSheet">
-                        <string notr="true">background-color: rgb(255, 255, 255);</string>
-                      </property>
-                      <property name="text">
-                        <string>Withdrawal</string>
-                      </property>
-                    </widget>
-                  </item>
-                </layout>
+                <widget class="QWidget" name="menuContainer" native="true">
+                  <property name="styleSheet">
+                    <string>
+                      QWidget#menuContainer {
+                        background-color: white;
+                        border-radius: 10px;
+                        padding: 20px;
+                      }
+                      QPushButton {
+                        min-height: 80px;
+                        font-size: 16px;
+                        font-weight: bold;
+                        background-color: #2196F3;
+                        color: white;
+                        border-radius: 10px;
+                        margin: 10px;
+                      }
+                      QPushButton:hover {
+                        background-color: #1976D2;
+                      }
+                      QPushButton#btnLogout {
+                        background-color: #f44336;
+                      }
+                      QPushButton#btnLogout:hover {
+                        background-color: #d32f2f;
+                      }
+                    </string>
+                  </property>
+                  <layout class="QGridLayout" name="menuButtonsLayout">
+                    <property name="spacing">
+                      <number>20</number>
+                    </property>
+                    <item row="0" column="0">
+                      <widget class="QPushButton" name="btn_balance">
+                        <property name="minimumSize">
+                          <size>
+                            <width>200</width>
+                            <height>80</height>
+                          </size>
+                        </property>
+                        <property name="text">
+                          <string>Balance</string>
+                        </property>
+                      </widget>
+                    </item>
+                    <item row="0" column="1">
+                      <widget class="QPushButton" name="btn_withdrawal">
+                        <property name="minimumSize">
+                          <size>
+                            <width>200</width>
+                            <height>80</height>
+                          </size>
+                        </property>
+                        <property name="text">
+                          <string>Withdrawal</string>
+                        </property>
+                      </widget>
+                    </item>
+                    <item row="1" column="0">
+                      <widget class="QPushButton" name="btn_transactions">
+                        <property name="minimumSize">
+                          <size>
+                            <width>200</width>
+                            <height>80</height>
+                          </size>
+                        </property>
+                        <property name="text">
+                          <string>Transactions</string>
+                        </property>
+                      </widget>
+                    </item>
+                    <item row="1" column="1">
+                      <widget class="QPushButton" name="btnLogout">
+                        <property name="minimumSize">
+                          <size>
+                            <width>200</width>
+                            <height>80</height>
+                          </size>
+                        </property>
+                        <property name="text">
+                          <string>Logout</string>
+                        </property>
+                      </widget>
+                    </item>
+                  </layout>
+                </widget>
               </item>
             </layout>
           </widget>
@@ -734,51 +821,117 @@
 
       <!-- Alapalkki -->
       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_bottom">
+        <layout class="QHBoxLayout" name="bottomBarLayout">
+          <property name="spacing">
+            <number>20</number>
+          </property>
           <property name="leftMargin">
-            <number>10</number>
+            <number>20</number>
           </property>
           <property name="rightMargin">
+            <number>20</number>
+          </property>
+          <property name="bottomMargin">
             <number>10</number>
           </property>
+          
+          <!-- Kello vasemmalla -->
           <item>
             <widget class="QLCDNumber" name="lcd">
-              <property name="maximumSize">
+              <property name="minimumSize">
                 <size>
-                  <width>100</width>
-                  <height>30</height>
+                  <width>120</width>
+                  <height>40</height>
                 </size>
               </property>
               <property name="styleSheet">
-                <string>background-color: black; color: white;</string>
+                <string>background-color: black; color: white; border-radius: 5px;</string>
               </property>
             </widget>
           </item>
+
+          <!-- Käyttäjätiedot keskellä -->
           <item>
-            <spacer name="horizontalSpacer_bottom">  <!-- Muutettu nimi -->
-              <property name="orientation">
-                <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-                <size>
-                  <width>40</width>
-                  <height>20</height>
-                </size>
-              </property>
-            </spacer>
-          </item>
-          <item>
-            <layout class="QHBoxLayout" name="navigationButtons">
+            <layout class="QHBoxLayout" name="userInfoLayout">
               <item>
-                <widget class="QPushButton" name="btn_back">
+                <widget class="QLabel" name="userImageLabel">
+                  <property name="minimumSize">
+                    <size>
+                      <width>60</width>
+                      <height>60</height>
+                    </size>
+                  </property>
                   <property name="maximumSize">
                     <size>
-                      <width>80</width>
-                      <height>30</height>
+                      <width>60</width>
+                      <height>60</height>
                     </size>
                   </property>
                   <property name="styleSheet">
-                    <string>background-color: #2196F3; color: white; border-radius: 5px;</string>
+                    <string>background-color: white; border-radius: 30px;</string>
+                  </property>
+                  <property name="scaledContents">
+                    <bool>true</bool>
+                  </property>
+                </widget>
+              </item>
+              <item>
+                <widget class="QLabel" name="userNameLabel">
+                  <property name="minimumWidth">
+                    <number>200</number>
+                  </property>
+                  <property name="font">
+                    <font>
+                      <pointsize>12</pointsize>
+                      <bold>true</bold>
+                    </font>
+                  </property>
+                  <property name="styleSheet">
+                    <string>color: white; margin-left: 10px;</string>
+                  </property>
+                  <property name="alignment">
+                    <set>Qt::AlignLeft|Qt::AlignVCenter</set>
+                  </property>
+                </widget>
+              </item>
+            </layout>
+          </item>
+
+          <!-- Painikkeet oikealla -->
+          <item>
+            <layout class="QHBoxLayout" name="buttonLayout">
+              <property name="spacing">
+                <number>10</number>
+              </property>
+              <item>
+                <widget class="QPushButton" name="btn_back">
+                  <property name="minimumSize">
+                    <size>
+                      <width>100</width>
+                      <height>50</height>
+                    </size>
+                  </property>
+                  <property name="font">
+                    <font>
+                      <pointsize>12</pointsize>
+                      <bold>true</bold>
+                    </font>
+                  </property>
+                  <property name="styleSheet">
+                    <string>
+                      QPushButton {
+                        background-color: #666666;
+                        color: white;
+                        border-radius: 10px;
+                        padding: 10px;
+                      }
+                      QPushButton:enabled {
+                        background-color: #2196F3;
+                      }
+                      QPushButton:hover:enabled {
+                        background-color: #1976D2;
+                      }
+                    </string>
                   </property>
                   <property name="text">
                     <string>Back</string>
@@ -787,14 +940,30 @@
               </item>
               <item>
                 <widget class="QPushButton" name="btn_exit">
-                  <property name="maximumSize">
+                  <property name="minimumSize">
                     <size>
-                      <width>80</width>
-                      <height>30</height>
+                      <width>100</width>
+                      <height>50</height>
                     </size>
                   </property>
+                  <property name="font">
+                    <font>
+                      <pointsize>12</pointsize>
+                      <bold>true</bold>
+                    </font>
+                  </property>
                   <property name="styleSheet">
-                    <string>background-color: #f44336; color: white; border-radius: 5px;</string>
+                    <string>
+                      QPushButton {
+                        background-color: #f44336;
+                        color: white;
+                        border-radius: 10px;
+                        padding: 10px;
+                      }
+                      QPushButton:hover {
+                        background-color: #d32f2f;
+                      }
+                    </string>
                   </property>
                   <property name="text">
                     <string>Exit</string>
